--- a/masters-project/my-app/package.json
+++ b/masters-project/my-app/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "vercel": "^48.1.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
